# dektec-gstreamer-plugin

./: README
src/: Makefile  Makefile.am  Makefile.in  gstdta2152sink.h  gstdta2152src.cpp  gstdta2152src.h  gstdta2160sink.h  gstdta2160src.h
